NO_JIRA disabled JvmNotifBasedGcStatsCollector for Java version >= 9